# example-opengl

./: .gitignore  CMakeLists.txt  flake.nix
shaders/: fragment.glsl  vertex.glsl
src/: gl_ext.c  gl_ext.h  main.c  shader_utils.c  shader_utils.h
